First stab at dark theme. Known bug: sun/moon icnons not showing  under /create-account

--- a/public/css/app-dark.css
+++ b/public/css/app-dark.css
@@ -5,8 +5,8 @@ button {
     transition: ease-out 0.15s;
 }
 button:hover {
-    box-shadow: inset 0 0 100px 0 rgb(32, 42, 178);
-    color: white;
+    box-shadow: inset 0 0 100px 0 darkorange;
+    color: black;
     font-size: large;
 }
 button:active:hover {
@@ -21,7 +21,7 @@ button:active:hover {
     width: 30%;
     border: 1px solid black;
     border-radius: 5px;
-    background-color: lightgoldenrodyellow;
+    background-color: ivory;
     text-align: center;
     font-size: larger;
     font-family: Arial, Helvetica, sans-serif;
@@ -42,15 +42,15 @@ button:active:hover {
 }
 .general-heading
 {
+    color: whitesmoke;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     padding: 2%;
 }
 body
 {
-    background-color: lightsteelblue;
+    background-color: #1a1a40;
 }
-
 
 .darkThemeLabel
 {
@@ -66,7 +66,7 @@ body
     padding: 0 6px;
     border-radius: 50px;
     cursor: pointer;
-    background: #ffffff;
+    background: gray;
 }
 
 #darkThemeSwitch:checked + .darkThemeLabel
@@ -81,15 +81,15 @@ body
 
 .darkThemeLabel .fa-moon
 {
-    transform: translateX(35px);
     transition: 0.3s;
-    opacity: 0;
+    opacity: 1;
     color: silver;
 }
 .darkThemeLabel .fa-sun
 {
+    transform: translateX(35px);
     transition: 0.3s;
-    opacity: 1;
+    opacity: 0;
     color: goldenrod;
 }
 
@@ -97,7 +97,7 @@ body
 {
     position: absolute;
     top: 3px;
-    right: 6px;
+    left: 6px;
     display: block;
     width: 20px;
     height: 20px;
@@ -111,21 +111,19 @@ body
 #darkThemeSwitch:checked + .darkThemeLabel .fa-sun
 {
 
-    opacity: 0;
-    transform: translateX(35px);
-
+    opacity: 1;
+    transform: translateX(0);
 }
 
 #darkThemeSwitch:checked + .darkThemeLabel .fa-moon
 {
-    opacity: 1;
-    transform: translateX(0);
-
+    opacity: 0;
+    transform: translateX(-35px);
 }
 
 #darkThemeSwitch:checked + .darkThemeLabel .ball
 {
-    transform: translateX(-30px);
+    transform: translateX(30px);
     background: goldenrod;
 }
 
@@ -203,7 +201,7 @@ body
 }
 .welcome-body {
     text-align: center;
-    background-color: lightsteelblue;
+    background-color: #1a1a40;
     font-family: Arial, Helvetica, sans-serif;
 }
 .welcome-body a {
@@ -212,7 +210,7 @@ body
 }
 .welcome-title {
     padding-top: 30px;
-    color: black;
+    color: whitesmoke;
     font-weight: bold;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
@@ -224,7 +222,7 @@ body
 .welcome-button {
     width: 200px;
     height: 80px;
-    background-color:lightgoldenrodyellow;
+    background-color: lightgoldenrodyellow;
     text-align: center;
     font-size: larger;
     font-family: Arial, Helvetica, sans-serif;
